Reestructura completa: controladores, modelos, rutas actualizados. Funcionamiento de Laravel y Swagger al 100%
