# app/Models/User.php
@@ -1,21 +1,0 @@
-<?php
-
-namespace App\Models;
-
-use Illuminate\Database\Eloquent\Factories\HasFactory;
-use Illuminate\Database\Eloquent\Model;
-
-class User extends Model
-{
-    use HasFactory;
-
-    public $timestamps = false;
-
-    protected $fillable = [
-        'name',
-        'email',
-        'password',
-        'phone'
-    ];
-}
-
